padding on register

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -294,6 +294,10 @@ li.appointmentListItem {
 
 /*register*/
 
+.registerRow{
+	padding-bottom: 60px;
+}
+
 h3.registerHeader {
 	padding-top: 20px;
 	padding-bottom: 20px;
