--- a/public/css/style.css
+++ b/public/css/style.css
@@ -336,3 +336,61 @@ h3.parentRegisterHero, h3.sitterRegisterHero{
 	padding-left: 40px;
 	float:right;
 }
+
+
+/* TOGGLE BUTTON */
+
+/**, *:before, *:after {
+   -moz-box-sizing: border-box; 
+  -webkit-box-sizing: border-box; 
+  box-sizing: border-box;
+}*/
+/*body {
+  font-family:'Helvetica', sans-serif; 
+}*/
+
+
+/* BUTTON 1 */
+
+
+.one .button-wrap {
+  width: 220px;
+  height: 50px;
+  margin: 0px auto 0;
+  cursor: pointer;
+}
+
+.one .button-bg {
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  border-radius: 40px;
+  padding: 3px;
+  color:#fff;
+  transition:all 0.2s ease;
+}
+.one .button-switch {
+  position:relative;
+  left:0px;
+  width: 110px;
+  height: 44px;
+  border:solid 6px;
+  border-radius: 36px;
+  transition:all 0.2s ease;
+}
+.one .button-active .button-switch { left:105px; }
+
+.one .button-in, 
+.one .button-out {
+  position:absolute; 
+  transition:all 0.2s ease;
+  padding-top:15px;
+  font-size:0.8em;
+  text-transform:uppercase;
+  font-weight:bold;
+}
+.one .button-in { margin-left:124px; }
+.one .button-out { margin-left:12px; color:#dd2222; }
+.one .button-active .button-out { color:#fff; }
+.one .button-active .button-in { color:#22dd22; }
+.one .button-active .button-bg { background-color:#333; }
