--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,6 +93,10 @@ nav a, .sitterRow h2, .sitterDetail h2, .appointmentListItems h2{
 	margin-bottom: 0px;
 }
 
+.navbar-brand{
+	padding: 10px 0px 0px 0px;
+	margin-left:0px;
+}
 /*COLORS*/
 
 .seafoam {
