--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,10 +205,16 @@ h2.sitterName {
 /*sitter detail*/
 
 .sitterDetail {
-	
-	height:100px;
-
+   
+    height:100px;
+    margin-bottom: 50px;
 }
+
+.sitterDetail ul {
+    height: 260px;
+}
+
+
 .sitterDetail h2, .sitterDetail p {
 	margin-top:0px;
 	font-size: 16px;
